--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,7 @@
 
 % =========================================================================
 \begin{document}
+\pagenumbering{Roman}
 \include{titlepage}
 \include{declaration}
 \include{abstract}
