images in minipage

--- a/abbrev.bib
+++ b/abbrev.bib
@@ -115,5 +115,15 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
   publisher={Springer}
 }
 
+@article{undercompleteautoencoder,
+  title={An autoencoder based model for detecting fraudulent credit card transaction},
+  author={Misra, Sumit and Thakur, Soumyadeep and Ghosh, Manosij and Saha, Sanjoy Kumar},
+  journal={Procedia Computer Science},
+  volume={167},
+  pages={254--262},
+  year={2020},
+  publisher={Elsevier}
+}
+
 
 
