--- a/declaration.tex
+++ b/declaration.tex
@@ -3,11 +3,12 @@
 
 \Large\textbf{Declaration of Originality}
 \paragraph{}
-    \begin{tabular}{p{1.8in}p{4.5in}}
+\hskip-0.8cm
+    \begin{tabular}{p{1.8in}p{4.8in}}
         Name & Sneha Banerjee \\
         Matriculation number & 430069 \\
         Address & Allmandring 8A,70569 Stuttgart \\        
-        Title & \textit{Development of a Transfer Learning Source Library: Leveraging Clustering and Contrastive Learning Techniques} \\
+        Title & \textit{Development of a Source Library for Transfer Learning: Leveraging Clustering and Contrastive Learning Techniques} \\
     \end{tabular}
 
 \vspace{1cm}
