--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,8 @@
 \restylefloat{table}
 \usepackage{hyperref} 
 \usepackage{acronym}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage[symbols,nogroupskip,record]{glossaries-extra}
 % \GlsXtrLoadResources[
 %  src={symbols.bib},
