--- a/titlepage.tex
+++ b/titlepage.tex
@@ -17,7 +17,7 @@ Media Informatics
 
 \vspace{1.7cm}
 \huge
-Development of a Transfer Learning Source Library: Leveraging Clustering and Contrastive Learning Techniques
+Development of a Source Library for Transfer Learning: Leveraging Clustering and Contrastive Learning Techniques
 
 \vspace{3.0cm}
 \Large
@@ -35,7 +35,7 @@ Matriculation Number: 430069
 \textsf{\textbf{
 \normalsize
 \begin{tabular}{ll}
-Examiner: & Prof Dr. Christian Bauckhage\\
+Examiner: & Prof. Dr. Christian Bauckhage\\
 Supervisor:  & Daniel Schiller\\
 \end{tabular}
 }}
