background untill autoencoders

--- a/lists/acronyms.tex
+++ b/lists/acronyms.tex
@@ -10,4 +10,6 @@
     \acro{AI}{Artificial Intelligence}
     \acro{DBSCAN}{Density-Based Spatial Clustering of Applications with Noise}
     \acro{HDBSCAN}{Hierarchical Density-Based Spatial Clustering of Applications with Noise}
+    \acro{VAE}{Variational Autoencoders}
+    \acro{KL}{Kullback–Leibler divergence}
 \end{acronym}
