--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
 \usepackage{acronym}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{todonotes}
 \usepackage[symbols,nogroupskip,record]{glossaries-extra}
 % \GlsXtrLoadResources[
 %  src={symbols.bib},
