--- a/abbrev.bib
+++ b/abbrev.bib
@@ -9,18 +9,6 @@
     number  = "3",
     pages   = "342--351"
 }
-@misc{ConvNet,
-  title = {Convolutional Neural Networks, Explained},
-  howpublished = {\url{https://towardsdatascience.com/convolutional-neural-networks-explained-9cc5188c4939}},
-}
-@misc{dbscanWiki,
-  title = {DBSCAN Wikipedia},
-  howpublished = {\url{https://en.wikipedia.org/wiki/DBSCAN}},
-}
-@misc{dendogram,
-  title = {Hierarchical Clustering},
-  howpublished = {\url{https://harshsharma1091996.medium.com/hierarchical-clustering-996745fe656b}},
-}
 
 @article{lecun1998gradient,
   title={Gradient-based learning applied to document recognition},
@@ -125,5 +113,76 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
   publisher={Elsevier}
 }
 
+@article{ng2011sparse,
+  title={Sparse autoencoder},
+  author={Ng, Andrew and others},
+  journal={CS294A Lecture notes},
+  volume={72},
+  number={2011},
+  pages={1--19},
+  year={2011}
+}
 
+@inproceedings{vincent2008extracting,
+  title={Extracting and composing robust features with denoising autoencoders},
+  author={Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={1096--1103},
+  year={2008}
+}
 
+@inproceedings{rifai2011contractive,
+  title={Contractive auto-encoders: Explicit invariance during feature extraction},
+  author={Rifai, Salah and Vincent, Pascal and Muller, Xavier and Glorot, Xavier and Bengio, Yoshua},
+  booktitle={Proceedings of the 28th international conference on international conference on machine learning},
+  pages={833--840},
+  year={2011}
+}
+
+@article{kingma2019introduction,
+  title={An introduction to variational autoencoders},
+  author={Kingma, Diederik P and Welling, Max and others},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={12},
+  number={4},
+  pages={307--392},
+  year={2019},
+  publisher={Now Publishers, Inc.}
+}
+
+@article{kullback1951information,
+  title={On information and sufficiency},
+  author={Kullback, Solomon and Leibler, Richard A},
+  journal={The annals of mathematical statistics},
+  volume={22},
+  number={1},
+  pages={79--86},
+  year={1951},
+  publisher={JSTOR}
+}
+@misc{ConvNet,
+  title = {Convolutional Neural Networks, Explained},
+  howpublished = {\url{https://towardsdatascience.com/convolutional-neural-networks-explained-9cc5188c4939}},
+}
+@misc{dbscanWiki,
+  title = {DBSCAN Wikipedia},
+  howpublished = {\url{https://en.wikipedia.org/wiki/DBSCAN}},
+}
+@misc{dendogram,
+  title = {Hierarchical Clustering},
+  howpublished = {\url{https://harshsharma1091996.medium.com/hierarchical-clustering-996745fe656b}},
+}
+@misc{autoencoder,
+  title = {Autoencoder},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Autoencoder}},
+}
+
+@misc{vae,
+  title = {Intuitively Understanding Variational Autoencoders},
+  howpublished = {\url{https://towardsdatascience.com/intuitively-understanding-variational-autoencoders-1bfe67eb5daf}},
+}
+
+@misc{vae_image,
+  title = {Understanding Variational Autoencoders(VAEs)},
+  howpublished = {\url{https://towardsdatascience.com/understanding-variational-autoencoders-vaes-f70510919f73}},
+}
