remove unnecessary files

--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{todonotes}
+\usepackage{chngcntr}
+\counterwithin{figure}{subsection}
 \usepackage[symbols,nogroupskip,record]{glossaries-extra}
 % \GlsXtrLoadResources[
 %  src={symbols.bib},
