background changed to fundamentals

--- a/fundamentals.tex
+++ b/fundamentals.tex
@@ -1,4 +1,4 @@
-\section{Background}
+\section{Fundamentals}
 \subsection{Bin Picking}
 \subsubsection{Definition and Application}
 \subsubsection{Gripper Types}
