--- a/titlepage.tex
+++ b/titlepage.tex
@@ -35,7 +35,8 @@ Matriculation Number: 430069
 \textsf{\textbf{
 \normalsize
 \begin{tabular}{ll}
-Examiner: & Prof. Dr. Christian Bauckhage\\
+1\textsuperscript{st} Examiner: & Prof. Dr. Christian Bauckhage, University of Bonn\\
+2\textsuperscript{nd} Examiner:  & Prof. Dr.-Ing. Alexander Verl, ISW, University of Stuttgart\\
 Supervisor:  & Daniel Schiller\\
 \end{tabular}
 }}
