--- a/abbrev.bib
+++ b/abbrev.bib
@@ -60,6 +60,35 @@
   year={2011}
 }
 
+@inproceedings{koch2015siamese,
+  title={Siamese neural networks for one-shot image recognition},
+  author={Koch, Gregory and Zemel, Richard and Salakhutdinov, Ruslan and others},
+  booktitle={ICML deep learning workshop},
+  volume={2},
+  number={1},
+  year={2015},
+  organization={Lille}
+}
+
+@article{bromley1993signature,
+  title={Signature verification using a" siamese" time delay neural network},
+  author={Bromley, Jane and Guyon, Isabelle and LeCun, Yann and S{\"a}ckinger, Eduard and Shah, Roopak},
+  journal={Advances in neural information processing systems},
+  volume={6},
+  year={1993}
+}
+
+@inproceedings{balntas2016learning,
+  title={Learning local feature descriptors with triplets and shallow convolutional neural networks.},
+  author={Balntas, Vassileios and Riba, Edgar and Ponsa, Daniel and Mikolajczyk, Krystian},
+  booktitle={Bmvc},
+  volume={1},
+  number={2},
+  pages={3},
+  year={2016}
+}
+
+
 @Inbook{kmeans,
 author="Jin, Xin
 and Han, Jiawei",
@@ -185,4 +214,14 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
 @misc{vae_image,
   title = {Understanding Variational Autoencoders(VAEs)},
   howpublished = {\url{https://towardsdatascience.com/understanding-variational-autoencoders-vaes-f70510919f73}},
+}
+
+@misc{siamese_network,
+  title = {A Comprehensive Guide to Siamese Neural Networks},
+  howpublished = {\url{https://medium.com/@rinkinag24/a-comprehensive-guide-to-siamese-neural-networks-3358658c0513}},
+}
+
+@misc{triplet_loss,
+  title = {Triplet Loss and Siamese Neural Networks},
+  howpublished = {\url{https://medium.com/@enoshshr/triplet-loss-and-siamese-neural-networks-5d363fdeba9b}},
 }
